# artigo_forecast

./: .gitignore  details.json  pyproject.toml
langgraph_tools/: __init__.py
notebooks/: 001_gtrp_llama3.1+3.2_locally.ipynb  002_gtrp_summaries.ipynb  summaries.json
