[tool.poetry]
name = "artigo forecast"
version = "0.1.0"
description = ""
authors = ["Gabriel Pehls <gabrielpehls@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
chromadb = "^0.5.11"
langchain-chroma = "^0.1.4"
langchain = "^0.3.2"
llama-index = "^0.11.16"
langchain-huggingface = "^0.1.0"
langchain-community = "^0.3.1"
langchain-openai = "^0.2.2"
jq = "^1.8.0"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
